--- a/src/templates/includes/header.twig
+++ b/src/templates/includes/header.twig
@@ -1,30 +1,79 @@
 <header class="header">
-	<div class="header__container">
-		<a class="header__logo" href="./index.html">
-			<img src="./images/logo.png" alt="logo">
-		</a>
+  <div class="main-nav__wrapper">
+    <nav class="main-nav">
+      <div class="header__container">
+        <ul>
+          <li>
+            <a href="#" class="main-nav__link main-nav__link--current"
+              >Wholesale</a
+            >
+          </li>
+          <li>
+            <a href="#" class="main-nav__link">Recipes</a>
+          </li>
+          <li>
+            <a href="#" class="main-nav__link">Blog</a>
+          </li>
+          <li>
+            <a href="#" class="main-nav__link">FAQ</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
 
-		<nav class="menu">
-			<ul class="menu__list">
-				<li>
-					<a href="./index.html" class="menu__link menu__link--current">Home</a>
-				</li>
-				<li>
-					<a href="#" class="menu__link">Portfolio</a>
-				</li>
-				<li>
-					<a href="#" class="menu__link">About</a>
-				</li>
-				<li>
-					<a href="#" class="menu__link">Contacts</a>
-				</li>
-			</ul>
-		</nav>
+  <div class="header__container">
+    <!-- <a class="header__logo" href="./index.html">
+      <img src="./images/logo.png" alt="logo" />
+    </a> -->
 
-		<button class="header__burger">
-			<span></span>
-		</button>
+    <div class="menu__wrapper">
+      <nav class="menu">
+        <ul class="menu__list">
+          <li>
+            <a href="./index.html" class="menu__link">belgian pearl sugar</a>
+          </li>
+          <li>
+            <a href="#" class="menu__link">liege waffle mix</a>
+          </li>
+          <li>
+            <a href="#" class="menu__link">liege waffle maker</a>
+          </li>
+          <li>
+            <a href="#" class="menu__link">speciality ingredients</a>
+          </li>
+        </ul>
+      </nav>
 
-		<button data-da=".menu, 767.98" class="header__button" type="button">Get started</button>
-	</div>
+      <button class="header__burger">
+        <span></span>
+      </button>
+
+      <div class="header-control">
+        <label class="header-control__label">
+          <svg width="14" height="14">
+            <use href="./images/icons.svg#icon-search"></use>
+          </svg>
+          <input
+            class="header-control__input"
+            type="text"
+            placeholder="Search"
+          />
+        </label>
+
+        <button class="header-control__button header-control__button--cart">
+          <svg width="24" height="24">
+            <use href="./images/icons.svg#icon-cart"></use>
+          </svg>
+        </button>
+
+        <button class="header-control__button header-control__button--user">
+          <svg width="18" height="21">
+            <use href="./images/icons.svg#icon-user"></use>
+          </svg>
+          Sign In
+        </button>
+      </div>
+    </div>
+  </div>
 </header>
