--- a/src/templates/includes/header.twig
+++ b/src/templates/includes/header.twig
@@ -2,6 +2,12 @@
   <div class="main-nav__wrapper">
     <nav class="main-nav">
       <div class="header__container">
+        <a class="header__logo" href="./index.html">
+          <svg width="94" height="80">
+            <use href="./images/icons.svg#icon-logo"></use>
+          </svg>
+        </a>
+
         <ul>
           <li>
             <a href="#" class="main-nav__link main-nav__link--current"
@@ -23,10 +29,6 @@
   </div>
 
   <div class="header__container">
-    <!-- <a class="header__logo" href="./index.html">
-      <img src="./images/logo.png" alt="logo" />
-    </a> -->
-
     <div class="menu__wrapper">
       <nav class="menu">
         <ul class="menu__list">
