--- a/src/templates/includes/hero.twig
+++ b/src/templates/includes/hero.twig
@@ -1,6 +1,6 @@
 <section class="hero">
   <div class="hero__container">
-    <div class="swiper">
+    <div class="swiper swiper-hero">
       <div class="swiper-wrapper">
         <div class="swiper-slide hero-swiper__slide">
           <img src="./images/Home/waffles.png" alt="waffles" />
