--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -110,10 +110,15 @@
     text-transform: uppercase;
     color: #fff;
     background-color: #b8b8b8;
+    transition: opacity 300ms $transitionBase;
 
     &--current {
       background-color: var(--color-primary);
       pointer-events: none;
+    }
+
+    &:hover {
+      opacity: 0.7;
     }
   }
 }
@@ -181,7 +186,7 @@
     transition: color 300ms $transitionBase;
 
     &:hover:not(.menu__link--current) {
-      color: var(--color-secondary);
+      color: var(--color-primary);
     }
   }
 }
@@ -212,6 +217,7 @@
     border: 1px solid #b8b8b8;
     border-radius: 100px;
     outline: 2px solid transparent;
+    transition: outline-color 300ms $transitionBase;
 
     &:focus {
       outline-color: var(--color-primary);
