--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -7,14 +7,7 @@
   }
 
   &__logo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding-top: 23px;
-    padding-inline: 9px;
-    padding-bottom: 11px;
-    background-color: #fff;
-    z-index: 5;
+    margin-right: 60px;
   }
 
   &__burger {
@@ -125,7 +118,8 @@
 
 // navigation
 .menu {
-  margin-left: 150px;
+  display: flex;
+  align-items: center;
 
   @media (max-width: $mobileMedium) {
     position: fixed;
