add helper component

--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block content %}
+	{% include './components/helper.twig' %}
 	{% include './includes/hero.twig' %}
 	{% include './includes/products.twig' %}
 {% endblock %}
