--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,9 @@
 @import './base/fonts';
 @import './base/reset';
 
+// components
+@import './components/helper';
+
 // layout
 @import './layout/header';
 @import './layout/hero';
