--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,4 +17,5 @@
 @import './layout/header';
 @import './layout/hero';
 @import './layout/products';
+@import './layout/recipes';
 @import './layout/footer';
