--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -11,6 +11,7 @@
 	{% include './components/helper.twig' %}
 	{% include './includes/hero.twig' %}
 	{% include './includes/products.twig' %}
+	{% include './includes/recipes.twig' %}
 {% endblock %}
 
 
