--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap");
 :root {
   --color-primary: #f4c22f;
   --color-text-main: #676767;
@@ -594,6 +594,115 @@ sup {
   font-size: 120px;
   font-weight: 700;
   background-color: var(--color-primary);
+}
+
+.recipes__container {
+  position: relative;
+  padding-top: 54px;
+  padding-bottom: 104px;
+}
+.recipes__container::before {
+  content: "";
+  display: block;
+  width: 183px;
+  height: 120px;
+  position: absolute;
+  top: -55px;
+  right: 165px;
+  background-image: url("../images/flag.png");
+  background-repeat: no-repeat;
+}
+.recipes__button {
+  display: flex;
+  align-items: center;
+  margin-inline: auto;
+  width: -moz-fit-content;
+  width: fit-content;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: var(--color-primary);
+  background: none;
+}
+.recipes__button span {
+  margin-right: -38px;
+}
+
+.recipes-content {
+  text-align: center;
+}
+.recipes-content__title {
+  margin-bottom: 16px;
+  font-size: 40px;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+.recipes-content__title span {
+  color: var(--color-primary);
+  font-weight: 400;
+  font-style: italic;
+}
+.recipes-content__text {
+  margin-bottom: 48px;
+  margin-inline: auto;
+  max-width: 464px;
+}
+
+.recipes-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  margin-bottom: 43px;
+  padding-block: 12px;
+}
+
+.recipes-item {
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+.recipes-item__share {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  background: none;
+  border: 1px solid #b8b8b8;
+  border-radius: 6px;
+  z-index: 1;
+}
+.recipes-item__content {
+  position: relative;
+  padding: 28px;
+}
+.recipes-item__rating {
+  margin-bottom: 8px;
+}
+.recipes-item__title {
+  margin-bottom: 10px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.recipes-item__title:hover {
+  text-decoration: underline;
+  text-underline-offset: 2px;
+}
+.recipes-item__details {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  margin-bottom: 12px;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.recipes-item__text {
+  margin-inline: auto;
+  max-width: 382px;
 }
 
 .footer {
